tests/testcases/errors/BCE0017-1.boo
"""
BCE0017-1.boo(7,6): BCE0017: The best overload for the method 'BCE0017-1Module.print(System.String)' is not compatible with the argument list '(System.Int32)'.
"""
def print(msg as string):
	pass
	
print(42)
